# study-buddy-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile.base  Dockerfile.dev  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1607fb32ab6e_initial_add_file_file_chunk.py  3b79bba388d8_init.py  4cb962ea4902_init.py  5737c3953000_add_user_fk_to_file.py  863f89dcd0d6_init.py  d2cd82a2b7af_more_chunk_metadata.py  ecd40c6e685f_init.py  fed321b898fa_init.py
app/: config.py  errors.py  main.py
app/api/: __init__.py  health.py
app/api/errors/: __init__.py
app/api/routes/: file.py  files.py  health.py  user.py
app/db/: deps.py  mixins.py  session.py  utils.py
app/db/models/: __init__.py  file.py  file_chunk.py  user.py
app/db/repositories/: __init__.py  file_chunk_repository.py  file_repository.py  user_repository.py
app/dependencies/: database.py  file.py  user.py
app/protocols/: parser.py
app/schemas/: file.py  file_chunk.py  user.py
app/services/: __init__.py  file_chunk_service.py  file_service.py  user_service.py
app/services/parsers/: __init__.py  pdf_parser.py
app/utils/: text.py
app/utils/parsers/: pdf_parser.py
tests/: conftest.py  test_health.py  test_ping.py  test_summary.py
tests/api/: test_create_user.py  test_files.py  test_get_user.py  test_user_routes.py
tests/assets/: example_markdown.md  example_word.docx
tests/utils/: test_parsers.py
