[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI interacting with LLM, Vector DB and Relational DB"
authors = ["Sebastian Soto M <s.m.sebastian.n@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "==0.115.9"
python-dotenv = ">=1.1.0,<2.0.0"
uvicorn = { extras = ["standard"], version = ">=0.34.2,<0.35.0" }
httpx = ">=0.28.1,<0.29.0"
returns = { extras = ["compatible-mypy"], version = ">=0.25.0,<0.26.0" }
sqlalchemy = ">=2.0.40,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.15.2,<2.0.0"
chromadb = ">=1.0.9,<2.0.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = { extras = ["email"], version = "^2.11.4" }
bcrypt = "<4.1.0"
greenlet = "^3.2.2"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
debugpy = "^1.8.14"
pytest-asyncio = "^0.23.5"
types-passlib = "^1.7.7.20250516"

[tool.isort]
profile = "black"
line_length = 88                      # Match Black’s default
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["asyncio: mark test to be run with pytest-asyncio"]
filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13",
]
